Better lens UI. Fixed a few bugs on mobile

--- a/src/site/static/scss/arbital.scss
+++ b/src/site/static/scss/arbital.scss
@@ -1094,8 +1094,10 @@ ins {
 		padding: 5px 25px 5px 5px;
 		font-size: 30px;
 		font-weight: 400;
-		max-width: 15vw;
-		border-bottom: $link-color 3px solid;
+		@media (min-width: 600px) {
+			border-bottom: $link-color 3px solid;
+			max-width: 25vw;
+		}
 	}
 
 	.remainder {
@@ -1104,8 +1106,14 @@ ins {
 
 	.page-tab {
 		padding: 15px 15px;
-		max-width: 10vw;
 		color: black !important;
+		@media (max-width: 599px) {
+			width: 100%;
+			box-sizing: border-box;
+		}
+		@media (min-width: 600px) {
+			max-width: 10vw;
+		}
 
 		& .tab-subtitle {
 			white-space: nowrap;
@@ -1119,26 +1127,50 @@ ins {
 		}
 	}
 
-	.lens-tab {
-		border-top: #ccc 1px solid;
-		border-right: #bbb 1px solid;
-		border-left: #bbb 1px solid;
-		border-bottom: $link-color 3px solid;
-		background-color: $very-light-link-color;
-
-		&.active-tab {
-			border-top: $link-color 3px solid;
-			border-right: $link-color 3px solid;
-			border-left: $link-color 3px solid;
-			border-bottom: none;
-			background-color: white;
+	@media (max-width: 599px) {
+		.lens-tab {
+			border-top: #ccc 1px solid;
+			border-bottom: #ccc 1px solid;
+			background-color: $very-light-link-color;
+	
+			&.active-tab {
+				border-top: $link-color 3px solid;
+				border-right: $link-color 3px solid;
+				border-left: $link-color 3px solid;
+				border-bottom: $link-color 3px solid;
+				background-color: white;
+			}
+		}
+		.lens-tab + .lens-tab {
+			border-top: none;
+	
+			&.active-tab {
+				border-top: $link-color 3px solid;
+			}
 		}
 	}
-	.lens-tab + .lens-tab {
-		border-left: none;
-
-		&.active-tab {
-			border-left: $link-color 3px solid;
+	@media (min-width: 600px) {
+		.lens-tab {
+			border-top: #ccc 1px solid;
+			border-right: #bbb 1px solid;
+			border-left: #bbb 1px solid;
+			border-bottom: $link-color 3px solid;
+			background-color: $very-light-link-color;
+	
+			&.active-tab {
+				border-top: $link-color 3px solid;
+				border-right: $link-color 3px solid;
+				border-left: $link-color 3px solid;
+				border-bottom: none;
+				background-color: white;
+			}
+		}
+		.lens-tab + .lens-tab {
+			border-left: none;
+	
+			&.active-tab {
+				border-left: $link-color 3px solid;
+			}
 		}
 	}
 }
