--- a/src/site/static/scss/changeSpeedButton.scss
+++ b/src/site/static/scss/changeSpeedButton.scss
@@ -130,7 +130,7 @@ arb-change-speed-button, [arb-change-speed-button] {
 
 @media (max-width: 599px) {
 	.change-speed-container {
-		margin-top: 20px;
+		margin-top: -60px;
 	}
 }
 
